# select-your-recipe

./: README.md  app.py  pyproject.toml
templates/: about.html  home.html
