[tool.poetry]
name = "repl_python3_select-your-recipe"
version = "0.1.0"
description = ""
authors = ["kirankumar282 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
